Added custom header and footer include option
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1586 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -7,44 +7,66 @@
 {META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-$Id$
--->
+<!-- $Id$ -->
 </head>
 <body>
-<table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
+  {CUSTOM_HEADER}
+  <table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
+    <tr>
+      <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
         <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
           <tr>
-            <td width="94%" height="22" valign="bottom" align="right"><span class="gal_name">{GAL_NAME}</span></td>
-            <td width="6%"></td>
+            <td width="94%" height="22" valign="bottom" align="right">
+              <span class="gal_name">
+                {GAL_NAME}
+              </span>
+            </td>
+            <td width="6%">
+            </td>
           </tr>
         </table>
       </td>
-  </tr>
-  <tr>
-    <td align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" border="0" align="center">
-        <tr>
-          <td valign="top" align="left">
+    </tr>
+    <tr>
+      <td align="center" valign="top" background="themes/hardwired/images/hw_02.gif">
+        <table width="100%" border="0" align="center">
+          <tr>
+            <td valign="top" align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
                 <tr>
-                  <td height="108" valign="top"><div align="right">{MAIN_MENU1}</div><br />
-                    {MAIN_MENU2} <br />
-                    <div align="center">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</div><br />
-                    {ADMIN_MENU} {GALLERY}</td>
+                  <td height="108" valign="top">
+                    <div align="right">
+                      {MAIN_MENU1}
+                    </div>
+                    <br />
+                    {MAIN_MENU2}
+                    <br />
+                    <div align="center">
+                      {THEME_SELECT_LIST}
+                      {LANGUAGE_SELECT_LIST}
+                    </div>
+                    <br />
+                    {ADMIN_MENU}
+                    {GALLERY}
+                  </td>
                 </tr>
               </table>
               <br />
             </td>
-        </tr>
-      </table></TD>
-  </tr>
-  <tr>
-    <td valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></td>
-  </tr>
-</table>
-<br />
-<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td valign="bottom">
+        <img src="themes/hardwired/images/hw_03.gif">
+      </td>
+    </tr>
+  </table>
+  <br />
+  <div align="center">
+    {LANGUAGE_SELECT_FLAGS}
+  </div>
+  {CUSTOM_FOOTER}
 </body>
 </html>
