--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -10,37 +10,48 @@
 <!-- $Id$ -->
 </head>
 <body>
-<table width="100%" border="0" cellpadding="20" cellspacing="20">
-<tr>
-        <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                       <tr>
-                                <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" alt="" /><br /></a></td>
-                                <td width="100%" align="center">
-                                        <h1>{GAL_NAME}</h1>
-                                        <h3>{GAL_DESCRIPTION}</h3><br />
-                                        {MAIN_MENU}
-                                </td>
-                        </tr>
-                </table>
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                  <td align="center" valign="top">{LANGUAGE_SELECT_FLAGS}</td></tr>
-                 <tr> <td align="center" valign="top">{LANGUAGE_SELECT_LIST}
-                  {THEME_SELECT_LIST}</td>
-                  </tr>
-                </table>
-                <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
-                <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                                <td align="center" valign="top">
-                                        {ADMIN_MENU}
-                                        {GALLERY}
-                                </td>
-                        </tr>
-                </table>
-                </td>
-        </tr>
-</table>
+  {CUSTOM_HEADER}
+  <table width="100%" border="0" cellpadding="20" cellspacing="20">
+    <tr>
+      <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td>
+              <a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" alt="" /></a><br />
+            </td>
+            <td width="100%" align="center">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3><br />
+              {MAIN_MENU}
+            </td>
+          </tr>
+        </table>
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td align="center" valign="top">
+              {LANGUAGE_SELECT_FLAGS}
+            </td>
+          </tr>
+          <tr>
+            <td align="center" valign="top">
+              {LANGUAGE_SELECT_LIST}
+              {THEME_SELECT_LIST}
+            </td>
+          </tr>
+        </table>
+        <img src="images/spacer.gif" width="1" height="15" alt="" />
+        <br />
+        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tr>
+            <td align="center" valign="top">
+              {ADMIN_MENU}
+              {GALLERY}
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  {CUSTOM_FOOTER}
 </body>
 </html>
