--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -7,86 +7,110 @@
 {META}
 <link rel="stylesheet" href="themes/fruity/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-$Id$
--->
+<!-- $Id$ -->
 </head>
-<body bgcolor="#FFFFFF" text="#000000">
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td style="background-color:#FFFF00" id="m11">&nbsp;</td>
-<td style="background-color:#FFFF00" id="m12">&nbsp;</td>
-<td id="m13">
-    <table border="0" cellspacing="0" cellpadding="0" width="100%">
+<body>
+  {CUSTOM_HEADER}
+  <table border="0" cellspacing="0" cellpadding="0" width="100%">
     <tr>
-    <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat" width="168"><img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" /></td>
-    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3></td>
+      <td style="background-color:#FFFF00" id="m11">
+      </td>
+      <td style="background-color:#FFFF00" id="m12">
+      </td>
+      <td id="m13">
+        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+          <tr>
+            <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat" width="168">
+              <img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" />
+            </td>
+            <td style="background-color:#FFA600" align="left" valign="middle">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3>
+            </td>
+          </tr>
+        </table>
+      </td>
     </tr>
-    </table>
-</td>
-</tr>
-<tr>
-<td style="background-color:#FFFF00" id="m21">&nbsp;</td>
-<td id="m22" style="background-image:url(themes/fruity/images/yellow_corner.gif);background-repeat:no-repeat" width="25"><img src="themes/fruity/images/blind.gif" width="25" height="45" border="0" alt="" /></td>
-<td id="m23"  style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
-{ADMIN_MENU}
-</td>
-</tr>
-<tr>
-<td id="m31" valign="top" style="background-color:#6BBE10">
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td >
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_left.gif);background-repeat:no-repeat" width="24"></td>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_middle.gif);background-repeat:repeat-x"><img src="themes/fruity/images/blind.gif" width="1" height="22" border="0" alt="" />&nbsp;</td>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_right.gif);background-repeat:no-repeat" width="98"></td>
-</tr>
-</table>
-</td>
-</tr>
-<tr>
-<td style="background-color:#6BBE10" align="center" valign="top">
-{MAIN_MENU}
-</td>
-</tr>
-</table>
-</td>
-<td id="m32" style="background-image:url(themes/fruity/images/grey_horizontal.gif);background-repeat:repeat-y" ></td>
-<td id="m33" valign="top">
-{GALLERY}
-{LANGUAGE_SELECT_LIST}&nbsp;
-{THEME_SELECT_LIST}
-</td>
-</tr>
-<tr>
-<td id="m41">
-  <table border="0" cellspacing="0" cellpadding="0" width="100%">
-  <tr>
-  <td style="background-color:#6BBE10">&nbsp;</td>
-  <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat" width="126"><img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />&nbsp;</td>
-  </tr>
+    <tr>
+      <td style="background-color:#FFFF00" id="m21">
+      </td>
+      <td id="m22" style="background-image:url(themes/fruity/images/yellow_corner.gif);background-repeat:no-repeat" width="25">
+        <img src="themes/fruity/images/blind.gif" width="25" height="45" border="0" alt="" />
+      </td>
+      <td id="m23" style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
+        {ADMIN_MENU}
+      </td>
+    </tr>
+    <tr>
+      <td id="m31" valign="top" style="background-color:#6BBE10">
+        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+          <tr>
+            <td >
+              <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                <tr>
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_left.gif);background-repeat:no-repeat" width="24">
+                  </td>
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_middle.gif);background-repeat:repeat-x">
+                    <img src="themes/fruity/images/blind.gif" width="1" height="22" border="0" alt="" />&nbsp;
+                  </td>
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_right.gif);background-repeat:no-repeat" width="98">
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="background-color:#6BBE10" align="center" valign="top">
+              {MAIN_MENU}
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td id="m32" style="background-image:url(themes/fruity/images/grey_horizontal.gif);background-repeat:repeat-y" >
+      </td>
+      <td id="m33" valign="top">
+        {GALLERY}
+        {LANGUAGE_SELECT_LIST}&nbsp;
+        {THEME_SELECT_LIST}
+      </td>
+    </tr>
+    <tr>
+      <td id="m41">
+        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+          <tr>
+            <td style="background-color:#6BBE10">
+            </td>
+            <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat" width="126">
+              <img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td id="m42" style="background-image:url(themes/fruity/images/lb_right.gif);background-repeat:no-repeat">
+      </td>
+      <td id="m43">
+      </td>
+    </tr>
+    <tr>
+      <td id="m51">
+        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+          <tr>
+            <td style="background-image:url(themes/fruity/images/left_bottom_left.gif);background-repeat:repeat-x">
+            </td>
+            <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat" width="126">
+              <img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td id="m52"></td>
+      <td id="m53"></td>
+    </tr>
   </table>
-</td>
-<td id="m42" style="background-image:url(themes/fruity/images/lb_right.gif);background-repeat:no-repeat"></td>
-<td id="m43">
-</td>
-</tr>
-<tr>
-<td id="m51">
-  <table border="0" cellspacing="0" cellpadding="0" width="100%">
-  <tr>
-  <td style="background-image:url(themes/fruity/images/left_bottom_left.gif);background-repeat:repeat-x">&nbsp;</td>
-  <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat" width="126"><img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />&nbsp;</td>
-  </tr>
-  </table>
-</td>
-<td id="m52"></td>
-<td id="m53"></td>
-</tr>
-</table>
-<br />
-<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
+  <br />
+  <div align="center">
+    {LANGUAGE_SELECT_FLAGS}
+  </div>
+  {CUSTOM_FOOTER}
 </body>
 </html>
