--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -7,10 +7,6 @@
 {META}
 <link rel="stylesheet" href="themes/mac_ox_x/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-$Id$
--->
-</head>
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_findObj(n, d) { //v4.01
@@ -29,51 +25,69 @@ function MM_showHideLayers() { //v6.0
 }
 //-->
 </script>
+<!-- $Id$ -->
+</head>
 <body>
-<div id="Menu1" style="position:absolute; width:800px; height:30px; z-index:1; left: 25px; top: 95px; visibility: hidden;">
-                <span class="topmenu">
-                        <table border="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                        <td>
-                                        {MAIN_MENU1}
-                                        </td>
-                                </tr>
-                        </table>
-                </span>
-</div>
-<table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
-  <tr>
-    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+  {CUSTOM_HEADER}
+  <div id="Menu1" style="position:absolute; width:800px; height:30px; z-index:1; left: 25px; top: 95px; visibility: hidden;">
+    <span class="topmenu">
+      <table border="0" cellpadding="0" cellspacing="0">
         <tr>
-          <td align="center" class="top_panel_tr">
-            <h1>{GAL_NAME}</h1>
-            <h3>{GAL_DESCRIPTION}</h3></td>
-          <td width="1" background="themes/mac_ox_x/images/top_panel_r1_c1b.gif"><img name="top_panel_r1_c2" src="themes/mac_ox_x/images/top_panel_r1_c2.jpg" height="65" border="0" id="top_panel_r1_c2" alt="" /></td>
-        </tr>
-      </table></td>
-  </tr>
-  <tr>
-    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
-        <tr>
-         <!-- <td><img name="top_panel_r2_c1" src="themes/mac_ox_x/images/top_panel_r2_c1.gif" width="30" height="35" border="0" id="top_panel_r2_c1" alt="" /></td> -->
-          <td align="center" background="themes/mac_ox_x/images/top_panel_r2_c1b.gif">
-                        <table border="0" cellpadding="0" cellspacing="0" border="0" class="top_menu_bttn">
-                                <tr>
-                                   {MAIN_MENU2}
-                                </tr>
-                        </table>
+          <td>
+            {MAIN_MENU1}
           </td>
-         <!-- <td width="100%" background="themes/mac_ox_x/images/top_panel_r2_c1b.gif">&nbsp;</td> -->
         </tr>
-      </table></td>
-  </tr>
-</table>
-<table width="100%" border="0" cellspacing="0" cellpadding="15">
-  <tr>
-    <td align="center">{ADMIN_MENU} {GALLERY} </td>
-  </tr>
-</table>
-{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}
-<p>&nbsp;</p>
+      </table>
+    </span>
+  </div>
+  <table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
+    <tr>
+      <td>
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+            <td align="center" class="top_panel_tr">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3>
+            </td>
+            <td width="1" background="themes/mac_ox_x/images/top_panel_r1_c1b.gif">
+              <img name="top_panel_r1_c2" src="themes/mac_ox_x/images/top_panel_r1_c2.jpg" height="65" border="0" id="top_panel_r1_c2" alt="" />
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+            <!--
+            <td><img name="top_panel_r2_c1" src="themes/mac_ox_x/images/top_panel_r2_c1.gif" width="30" height="35" border="0" id="top_panel_r2_c1" alt="" /></td>
+            -->
+            <td align="center" background="themes/mac_ox_x/images/top_panel_r2_c1b.gif">
+              <table border="0" cellpadding="0" cellspacing="0" border="0" class="top_menu_bttn">
+                <tr>
+                  {MAIN_MENU2}
+                </tr>
+              </table>
+            </td>
+            <!--
+            <td width="100%" background="themes/mac_ox_x/images/top_panel_r2_c1b.gif">&nbsp;</td>
+            -->
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" border="0" cellspacing="0" cellpadding="15">
+    <tr>
+      <td align="center">{ADMIN_MENU} {GALLERY} </td>
+    </tr>
+  </table>
+  {THEME_SELECT_LIST}
+  {LANGUAGE_SELECT_LIST}
+  {LANGUAGE_SELECT_FLAGS}
+  <p>&nbsp;</p>
+  {CUSTOM_FOOTER}
 </body>
 </html>
