--- a/devel/themes/styleguide/template.html
+++ b/devel/themes/styleguide/template.html
@@ -5,51 +5,49 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-
 {CUSTOM_STYLESHEET}
-
 <script type="text/javascript" src="scripts.js"></script>
 <script type="text/javascript" src="themes/styleguide/domLib.js"></script>
 <script type="text/javascript" src="themes/styleguide/domTT.js"></script>
 <script type="text/javascript">
   var domTT_classPrefix = 'domTTOverlib';
 </script>
-<!--
-$Id$
--->
+<!-- $Id$ -->
 </head>
 <body>
+  {CUSTOM_HEADER}
+  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <tr>
+      <td width="100%" align="center">
+        <h1>{GAL_NAME}</h1>
+        <h3>{GAL_DESCRIPTION}</h3>
+        {LANGUAGE_SELECT_FLAGS}
+        {LANGUAGE_SELECT_LIST}
+        {THEME_SELECT_LIST}
+        <br />
+        {MAIN_MENU}
+      </td>
+      </tr>
+  </table>
 
-
-
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td width="100%" align="center">
-      <h1>{GAL_NAME}</h1>
-      <h3>{GAL_DESCRIPTION}</h3>
-      {LANGUAGE_SELECT_FLAGS}
-      {LANGUAGE_SELECT_LIST}
-      {THEME_SELECT_LIST}
-      <br />
-      {MAIN_MENU}
-    </td>
+  <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
+  <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+    <tr>
+      <td align="center" valign="top">
+        {STYLEGUIDE_HEADER}
+      </td>
+      <td align="center" valign="top">
+        {ADMIN_MENU}
+        {GALLERY}
+      </td>
     </tr>
-</table>
-
-<img src="images/spacer.gif" width="1" height="15" alt="" /><br />
-<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td align="center" valign="top">
-      {CUSTOM_HEADER}
-    </td>
-    <td align="center" valign="top">
-      {ADMIN_MENU}
-      {GALLERY}
-    </td>
-  </tr>
-</table>
-<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />
-
+  </table>
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  {CUSTOM_FOOTER}
 </body>
 </html>
