--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -10,31 +10,33 @@
 <!-- $Id$ -->
 </head>
 <body>
-<table width="100%" border="0" cellpadding="20" cellspacing="20">
-<tr>
-        <td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                       <tr>
-                                <td width="100%" align="center">
-                                        <h1>{GAL_NAME}</h1>
-                                        <h3>{GAL_DESCRIPTION}</h3><br />
-                                        {MAIN_MENU}<br />
-                                        {LANGUAGE_SELECT_FLAGS}<br>{LANGUAGE_SELECT_LIST}&nbsp;
-                                        {THEME_SELECT_LIST}
-                                </td>
-                        </tr>
-                </table>
-                <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
-                <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                                <td align="center" valign="top">
-                                        {ADMIN_MENU}
-                                        {GALLERY}
-                                </td>
-                        </tr>
-                </table>
-        </td>
-</tr>
-</table>
+  {CUSTOM_HEADER}
+  <table width="100%" border="0" cellpadding="20" cellspacing="20">
+    <tr>
+      <td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td width="100%" align="center">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3><br />
+              {MAIN_MENU}<br />
+              {LANGUAGE_SELECT_FLAGS}<br>{LANGUAGE_SELECT_LIST}&nbsp;
+              {THEME_SELECT_LIST}
+            </td>
+          </tr>
+        </table>
+        <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
+        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tr>
+            <td align="center" valign="top">
+              {ADMIN_MENU}
+              {GALLERY}
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  {CUSTOM_FOOTER}
 </body>
 </html>
