--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
@@ -17,7 +18,7 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td>
-              <a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" alt="" /></a><br />
+              <a href="index.php"><img src="themes/classic/images/site_logo.png" border="0" alt="" /></a><br />
             </td>
             <td width="100%" align="center">
               <h1>{GAL_NAME}</h1>
