--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -44,7 +44,7 @@
         <br />
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
-            <td align="center" valign="top">
+            <td align="left" valign="top">
               {ADMIN_MENU}
               {GALLERY}
             </td>
