--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
@@ -20,7 +21,7 @@
               <h1>{GAL_NAME}</h1>
               <h3>{GAL_DESCRIPTION}</h3><br />
               {MAIN_MENU}<br />
-              {LANGUAGE_SELECT_FLAGS}<br>{LANGUAGE_SELECT_LIST}&nbsp;
+              {LANGUAGE_SELECT_FLAGS}<br />{LANGUAGE_SELECT_LIST}&nbsp;
               {THEME_SELECT_LIST}
             </td>
           </tr>
