--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -29,7 +29,7 @@
         <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
-            <td align="center" valign="top">
+            <td align="left" valign="top">
               {ADMIN_MENU}
               {GALLERY}
             </td>
