Moved lang and theme selectors to bottom to remove large gap when not used
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1675 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -20,18 +20,18 @@
             <td width="100%" align="center">
               <h1>{GAL_NAME}</h1>
               <h3>{GAL_DESCRIPTION}</h3><br />
-              {MAIN_MENU}<br />
-              {LANGUAGE_SELECT_FLAGS}<br />{LANGUAGE_SELECT_LIST}&nbsp;
-              {THEME_SELECT_LIST}
+              {MAIN_MENU}
             </td>
           </tr>
         </table>
-        <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
+        <img src="images/spacer.gif" width="1" height="15" alt="" />
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
             <td align="left" valign="top">
               {ADMIN_MENU}
               {GALLERY}
+			  {LANGUAGE_SELECT_FLAGS}<br />
+			  {LANGUAGE_SELECT_LIST}{THEME_SELECT_LIST}
             </td>
           </tr>
         </table>
