--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -113,5 +113,19 @@
     {LANGUAGE_SELECT_FLAGS}
   </div>
   {CUSTOM_FOOTER}
+ <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
+
+<!--
+  <div align="center"><p>
+  <a href="http://validator.w3.org/check?uri=referer"><img
+          src="http://www.w3.org/Icons/valid-xhtml10"
+          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
+      
+		  <a href="http://jigsaw.w3.org/css-validator/">
+  <img style="border:0;width:88px;height:31px"
+       src="http://jigsaw.w3.org/css-validator/images/vcss" 
+       alt="Valid CSS!" />
+ </a>
+ </p></div> -->
 </body>
 </html>
