--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html dir="{lang_dir}">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
-<meta http-equiv="content-type" content="text/html; charset={charset}" />
+<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
@@ -13,8 +14,8 @@
   {CUSTOM_HEADER}
   <table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
     <tr>
-      <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
-        <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
+      <td width="778" height="61" valign="middle" align="right" style="background: url(themes/hardwired/images/hw_01.gif);">
+        <table width="73%" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td width="94%" height="22" valign="bottom" align="right">
               <span class="gal_name">
@@ -28,14 +29,14 @@
       </td>
     </tr>
     <tr>
-      <td align="center" valign="top" background="themes/hardwired/images/hw_02.gif">
+      <td align="center" valign="top" style="background: url(themes/hardwired/images/hw_02.gif);">
         <table width="100%" border="0" align="center">
           <tr>
             <td valign="top" align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
                 <tr>
                   <td height="108" valign="top">
-                    <div align="right">
+                    <div align="right" class="topmenu">
                       {MAIN_MENU1}
                     </div>
                     <br />
@@ -59,14 +60,30 @@
     </tr>
     <tr>
       <td valign="bottom">
-        <img src="themes/hardwired/images/hw_03.gif">
+        <img src="themes/hardwired/images/hw_03.gif" alt="" />
       </td>
     </tr>
   </table>
   <br />
   <div align="center">
     {LANGUAGE_SELECT_FLAGS}
+	<br /><br />
   </div>
   {CUSTOM_FOOTER}
+  
+  <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
+
+<!--
+  <div align="center"><p>
+  <a href="http://validator.w3.org/check?uri=referer"><img
+          src="http://www.w3.org/Icons/valid-xhtml10"
+          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
+      
+		  <a href="http://jigsaw.w3.org/css-validator/">
+  <img style="border:0;width:88px;height:31px"
+       src="http://jigsaw.w3.org/css-validator/images/vcss" 
+       alt="Valid CSS!" />
+ </a>
+ </p></div> -->
 </body>
 </html>
