--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -20,7 +20,7 @@
             <td width="100%" align="center">
               <h1>{GAL_NAME}</h1>
               <h3>{GAL_DESCRIPTION}</h3><br />
-              {MAIN_MENU}
+              {SYS_MENU}<br />{SUB_MENU}
             </td>
           </tr>
         </table>
@@ -38,20 +38,6 @@
       </td>
     </tr>
   </table>
-  {CUSTOM_FOOTER}
-  <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
-
-<!--
-  <div align="center"><p>
-  <a href="http://validator.w3.org/check?uri=referer"><img
-          src="http://www.w3.org/Icons/valid-xhtml10"
-          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
-      
-		  <a href="http://jigsaw.w3.org/css-validator/">
-  <img style="border:0;width:88px;height:31px"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
- </a>
- </p></div> -->
+  {CUSTOM_FOOTER}{VANITY}
 </body>
 </html>
