--- a/stable/themes/hardwired/template.html
+++ b/stable/themes/hardwired/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html dir="{lang_dir}">
+<html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
 <meta http-equiv="content-type" content="text/html; charset={charset}" />
