--- a/devel/themes/styleguide/template.html
+++ b/devel/themes/styleguide/template.html
@@ -25,7 +25,7 @@
         {LANGUAGE_SELECT_LIST}
         {THEME_SELECT_LIST}
         <br />
-        {MAIN_MENU}
+       {SYS_MENU}|{SUB_MENU}
       </td>
       </tr>
   </table>
@@ -49,5 +49,6 @@
   <br />
   <br />
   {CUSTOM_FOOTER}
+  {VANITY}
 </body>
 </html>
