added gallery name and description to all themes
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2232 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -21,6 +21,10 @@
               <span class="gal_name">
                 {GAL_NAME}
               </span>
+              <br />
+              <span class="gal_description">
+                {GAL_DESCRIPTION}
+              </span>
             </td>
             <td width="6%">
             </td>
@@ -67,7 +71,7 @@
   <br />
   <div align="center">
     {LANGUAGE_SELECT_FLAGS}
-	<br /><br />
+        <br /><br />
   </div>
   {CUSTOM_FOOTER}
   {VANITY}
