--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -87,6 +87,8 @@ function MM_showHideLayers() { //v6.0
     </table>
   </div>
 
+<h3 align="center">{GAL_NAME} - {GAL_DESCRIPTION}</h3>
+
   <div style="padding: 5px 20px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
