--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -34,7 +34,7 @@
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
            <td><img src="themes/rainy_day/images/template_r3_c1.gif" width="560" height="67" border="0" alt="" /></td>
-              <td width="100%" style="background-image:url(themes/rainy_day/images/template_r3_c7.gif)">&nbsp;</td>
+              <td width="100%" style="background-image:url(themes/rainy_day/images/template_r3_c7.gif)" align="right">{GAL_DESCRIPTION}</td>
            <td><img src="themes/rainy_day/images/template_r3_c9.gif" width="42" height="67" border="0" alt="" /></td>
           </tr>
         </table></td>
