renamed classic to sample and core to classic, excluded "sample" and "CVS" to be displayed in themeSelect
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2293 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/sample/template.html
+++ b/devel/themes/sample/template.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/classic/style.css" />
+<link rel="stylesheet" href="themes/sample/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
 <!-- $Id$ -->
 </head>
@@ -18,7 +18,7 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td>
-              <a href="index.php"><img src="themes/classic/images/site_logo.png" border="0" alt="" /></a><br />
+              <a href="index.php"><img src="themes/sample/images/site_logo.png" border="0" alt="" /></a><br />
             </td>
             <td width="100%" align="center">
               <h1>{GAL_NAME}</h1>
