--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/core/style.css" />
+<link rel="stylesheet" href="themes/classic/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
 <!-- $Id$ -->
 </head>
