changed language/theme selector order for consistency
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2355 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -69,8 +69,8 @@
       <td id="m33" valign="top">
         {GALLERY}
         <div id="SELECT_LISTS">
-          {LANGUAGE_SELECT_LIST}&nbsp;
-          {THEME_SELECT_LIST}
+          {THEME_SELECT_LIST}&nbsp;
+          {LANGUAGE_SELECT_LIST}
         </div>
       </td>
     </tr>
