--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -33,7 +33,7 @@
               <div style="text-align:center;">
               <div>
 			  {LANGUAGE_SELECT_FLAGS}<br />
-			  {LANGUAGE_SELECT_LIST}{THEME_SELECT_LIST}
+			  {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
 			  </div>
 			  </div>
             </td>
