--- a/stable/themes/classic/template.html
+++ b/stable/themes/classic/template.html
@@ -1,52 +1,58 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/classic/style.css" />
+<link rel="stylesheet" href="themes/classic/style.css" type="text/css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-  Coppermine version: 1.3.5
-  $Source$
-  $Revision$
-  $Author$
-  $Date$
--->
+<!-- $Id$ -->
 </head>
 <body>
-<table width="100%" height="100%" border="0" cellpadding="20" cellspacing="20" bgcolor="#CCCCCC">
-<tr>
-        <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid;">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                       <tr>
-                                <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" /><br /></a></td>
-                                <td width="100%" align="center">
-                                        <h1>{GAL_NAME}</h1>
-                                        <h3>{GAL_DESCRIPTION}</h3><br />
-                                        {MAIN_MENU}
-                                </td>
-                        </tr>
-                </table>
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                  <td align="center" valign="top">{LANGUAGE_SELECT_FLAGS}</td></tr>
-                 <tr> <td align="center" valign="top">{LANGUAGE_SELECT_LIST}
-                  {THEME_SELECT_LIST}</td>
-                  </tr>
-                </table>
-                <img src="images/spacer.gif" width="1" height="15" /><br />
-                <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                                <td align="center" valign="top">
-                                        {ADMIN_MENU}
-                                        {GALLERY}
-                                </td>
-                        </tr>
-                </table>
-                </td>
-        </tr>
-</table>
+  {CUSTOM_HEADER}
+  <table width="100%" border="0" cellpadding="20" cellspacing="20">
+    <tr>
+      <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td>
+              <a href="index.php"><img src="themes/classic/images/site_logo.png" border="0" alt="" /></a><br />
+            </td>
+            <td width="100%" align="center">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3><br />
+              {SYS_MENU} <br /> {SUB_MENU}
+            </td>
+          </tr>
+        </table>
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td align="center" valign="top">
+              {LANGUAGE_SELECT_FLAGS}
+            </td>
+          </tr>
+          <tr>
+            <td align="center" valign="top">
+              {THEME_SELECT_LIST}
+              {LANGUAGE_SELECT_LIST}
+            </td>
+          </tr>
+        </table>
+        <img src="images/spacer.gif" width="1" height="15" alt="" />
+        <br />
+        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tr>
+            <td align="left" valign="top">
+              {ADMIN_MENU}
+              {GALLERY}
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  {CUSTOM_FOOTER}{VANITY}
 </body>
 </html>
