--- a/stable/themes/hardwired/template.html
+++ b/stable/themes/hardwired/template.html
@@ -1,54 +1,50 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html dir="{LANG_DIR}">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
-<meta http-equiv="content-type" content="text/html; charset={CHARSET}" />
+<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
+<link rel="stylesheet" type="text/css" href="themes/hardwired/style.css" />
 {META}
-<link rel="stylesheet" href="themes/hardwired/style.css" />
-<script type="text/javascript" src="scripts.js"></script>
-<!--
-  Coppermine version: 1.3.5
-  $Source$
-  $Revision$
-  $Author$
-  $Date$
--->
+<script type="text/javascript" src="scripts.js" ></script>
+<!-- $Id$ -->
 </head>
+{CUSTOM_HEADER}
 <body>
-<table width="778" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
-        <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td width="94%" height="22" valign="bottom" align="right"><span class="gal_name">{GAL_NAME}</span></td>
-            <td width="6%"></td>
-          </tr>
-        </table>
-      </td>
+<table width="100%"  border="0" cellspacing="0" cellpadding="0">
+  <tr valign="top">
+    <td width="53" rowspan="3" id="far-left"><img src="themes/hardwired/images/far-left.gif" width="54" height="14" alt="" /></td>
+    <td width="18" class="middle-left"><img src="themes/hardwired/images/middle-left.gif" width="18" height="14" alt="" /></td>
+    <td height="62" class="right-banner">
+        <div class="left-banner">
+        <div class="gal_name">{GAL_NAME}</div>
+        <div class="gal_description">{GAL_DESCRIPTION}</div>
+        </div>
+    </td>
+    <td width="19" class="middle-right"><img src="themes/hardwired/images/middle-right.gif" width="19" height="14" alt="" /></td>
+    <td width="53" rowspan="3" class="far-right"><img src="themes/hardwired/images/far-right.gif" width="53" height="14" alt="" /></td>
   </tr>
   <tr>
-    <td height="100%" align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" height="100%" border="0" align="center">
-        <tr>
-          <td valign="top" align="left">
-              <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
-                <tr>
-                  <td height="108" valign="top"><div align="right">{MAIN_MENU1}</div><br />
-                    {MAIN_MENU2} <br />
-                    <div align="center">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</div><br />
-                    {ADMIN_MENU} {GALLERY}</td>
-                </tr>
-              </table>
-              <br />
-            </td>
-        </tr>
-      </table></TD>
+    <td width="18" class="middle-left">&nbsp;</td>
+    <td class="gallery"><div align="right" class="topmenu"> {SYS_MENU} </div>
+      <br />
+      <div align="left" class="topmenu">{SUB_MENU}</div> <br />
+      <div align="center"> {THEME_SELECT_LIST} {LANGUAGE_SELECT_LIST} </div>
+      <br />
+      {ADMIN_MENU} {GALLERY}</td>
+    <td width="19" class="middle-right">&nbsp;</td>
   </tr>
-  <tr>
-    <td valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></td>
+  <tr valign="baseline">
+    <td width="18" class="middle-left"><img src="themes/hardwired/images/bottom-left.gif" width="18" height="31" alt="" /></td>
+    <td class="bottom-middle">&nbsp;</td>
+    <td width="19" class="middle-right"><img src="themes/hardwired/images/bottom-right.gif" width="19" height="31" alt="" /></td>
   </tr>
 </table>
 <br />
-<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
+<div align="center"> {LANGUAGE_SELECT_FLAGS} <br />
+  <br />
+</div>
+{CUSTOM_FOOTER}
+{VANITY}
 </body>
 </html>
