--- a/stable/themes/water_drop/template.html
+++ b/stable/themes/water_drop/template.html
@@ -1,46 +1,47 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/water_drop/style.css" />
+<link rel="stylesheet" href="themes/water_drop/style.css" type="text/css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-  Coppermine version: 1.3.5
-  $Source$
-  $Revision$
-  $Author$
-  $Date$
--->
+<!-- $Id$ -->
 </head>
 <body>
-<table width="100%" height="100%" border="0" cellpadding="20" cellspacing="20">
-<tr>
-        <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid #ccd7e0; background-color: #fff;">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                       <tr>
-                                <td width="100%" align="center">
-                                        <h1>{GAL_NAME}</h1>
-                                        <h3>{GAL_DESCRIPTION}</h3><br />
-                                        {MAIN_MENU}<br />
-                                        {LANGUAGE_SELECT_FLAGS}<br>{LANGUAGE_SELECT_LIST}&nbsp;
-                                        {THEME_SELECT_LIST}
-                                </td>
-                        </tr>
-                </table>
-                <img src="images/spacer.gif" width="1" height="15" /><br />
-                <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                                <td align="center" valign="top">
-                                        {ADMIN_MENU}
-                                        {GALLERY}
-                                </td>
-                        </tr>
-                </table>
-        </td>
-</tr>
-</table>
+  {CUSTOM_HEADER}
+  <table width="100%" border="0" cellpadding="20" cellspacing="20">
+    <tr>
+      <td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td width="100%" align="center">
+              <h1>{GAL_NAME}</h1>
+              <h3>{GAL_DESCRIPTION}</h3><br />
+              {SYS_MENU}<br />{SUB_MENU}
+            </td>
+          </tr>
+        </table>
+        <img src="images/spacer.gif" width="1" height="15" alt="" />
+        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tr>
+            <td valign="top">
+              {ADMIN_MENU}
+              {GALLERY}
+              <div style="text-align:center;">
+              <div>
+			  {LANGUAGE_SELECT_FLAGS}<br />
+			  {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
+			  </div>
+			  </div>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  {CUSTOM_FOOTER}{VANITY}
 </body>
 </html>
