Added {JAVASCRIPT} token to template and applied correspoding function to theme (thread id 29858)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2951 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -6,7 +6,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/fruity/style.css" type="text/css" />
-<script type="text/javascript" src="scripts.js"></script>
+{JAVASCRIPT}
 <!-- $Id$ -->
 </head>
 <body bgcolor="#FFFFFF" text="#000000">
