--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -6,7 +6,7 @@
 <title>{TITLE}</title>
 <link rel="stylesheet" type="text/css" href="themes/hardwired/style.css" />
 {META}
-<script type="text/javascript" src="scripts.js" ></script>
+{JAVASCRIPT}
 <!-- $Id$ -->
 </head>
 <body>
