--- a/devel/themes/sample/template.html
+++ b/devel/themes/sample/template.html
@@ -7,7 +7,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/sample/style.css" type="text/css" />
-<script type="text/javascript" src="scripts.js"></script>
+{JAVASCRIPT}
 <!-- $Id$ -->
 </head>
 <body>
