--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -7,7 +7,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/water_drop/style.css" type="text/css" />
-<script type="text/javascript" src="scripts.js"></script>
+{JAVASCRIPT}
 <!-- $Id$ -->
 </head>
 <body>
@@ -32,10 +32,10 @@
               {GALLERY}
               <div style="text-align:center;">
               <div>
-			  {LANGUAGE_SELECT_FLAGS}<br />
-			  {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
-			  </div>
-			  </div>
+                          {LANGUAGE_SELECT_FLAGS}<br />
+                          {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
+                          </div>
+                          </div>
             </td>
           </tr>
         </table>
