--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -6,7 +6,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/rainy_day/style.css" type="text/css" />
-<script type="text/javascript" src="scripts.js"></script>
+{JAVASCRIPT}
 <!-- $Id$ -->
 </head>
 <body>
