Unobfuscated the credits tag
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3354 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -47,6 +47,7 @@
             <td align="left" valign="top">
               {ADMIN_MENU}
               {GALLERY}
+              {CREDITS}
             </td>
           </tr>
         </table>
