--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -74,7 +74,7 @@
   <div style="padding: 5px 20px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td valign="top">{ADMIN_MENU} {GALLERY}</td>
+        <td valign="top">{ADMIN_MENU} {GALLERY} {CREDITS}</td>
       </tr>
 
       <tr>
