--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -68,6 +68,7 @@
       </td>
       <td id="m33" valign="top">
         {GALLERY}
+        {CREDITS}
         <div id="SELECT_LISTS">
           {THEME_SELECT_LIST}&nbsp;
           {LANGUAGE_SELECT_LIST}
