--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -48,6 +48,7 @@
 <div id="GALLERY">
       {ADMIN_MENU}
       {GALLERY}
+      {CREDITS}
 </div>
 <div id="SELECT_FLAGS">
  {LANGUAGE_SELECT_FLAGS}
