--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -30,6 +30,7 @@
             <td valign="top">
               {ADMIN_MENU}
               {GALLERY}
+              {CREDITS}
               <div style="text-align:center;">
               <div>
                           {LANGUAGE_SELECT_FLAGS}<br />
