--- a/devel/themes/sample/template.html
+++ b/devel/themes/sample/template.html
@@ -47,6 +47,7 @@
             <td align="left" valign="top">
               {ADMIN_MENU}
               {GALLERY}
+              {CREDITS}
             </td>
           </tr>
         </table>
