Added admin block for advanced administration purposes (work in progress). Moved credits section to bottom of templates.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3462 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -46,13 +46,12 @@
           <tr>
             <td align="left" valign="top">
               {GALLERY}
-              {CREDITS}
             </td>
           </tr>
         </table>
       </td>
     </tr>
   </table>
-  {CUSTOM_FOOTER}{VANITY}
+  {CUSTOM_FOOTER}{VANITY}{CREDITS}
 </body>
 </html>
