--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -37,6 +37,7 @@
       <td id="m23"  style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
         <br />
         {ADMIN_MENU}
+        {ADMIN_BLOCK}
       </td>
     </tr>
     <tr>
@@ -68,7 +69,6 @@
       </td>
       <td id="m33" valign="top">
         {GALLERY}
-        {CREDITS}
         <div id="SELECT_LISTS">
           {THEME_SELECT_LIST}&nbsp;
           {LANGUAGE_SELECT_LIST}
@@ -111,5 +111,6 @@
   <div align="center">{LANGUAGE_SELECT_FLAGS}</div>
   {CUSTOM_FOOTER}
   {VANITY}
+  {CREDITS}
 </body>
 </html>
