--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -31,7 +31,7 @@
       <div align="left" class="topmenu">{SUB_MENU}</div> <br />
       <div align="center"> {THEME_SELECT_LIST} {LANGUAGE_SELECT_LIST} </div>
       <br />
-      {ADMIN_MENU} {GALLERY} {CREDITS}</td>
+      {ADMIN_MENU} {ADMIN_BLOCK} {GALLERY}</td>
     <td width="19" class="middle-right">&nbsp;</td>
   </tr>
   <tr valign="baseline">
@@ -46,5 +46,6 @@
 </div>
 {CUSTOM_FOOTER}
 {VANITY}
+{CREDITS}
 </body>
 </html>
