--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -35,8 +35,8 @@
 
 <div id="GALLERY">
   {ADMIN_MENU}
+  {ADMIN_BLOCK}
   {GALLERY}
-  {CREDITS}
 </div>
 
 
@@ -57,6 +57,8 @@
 <div id="VANITY">
   {VANITY}
 </div>
+
+{CREDITS}
 
 </body>
 </html>
