--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -29,8 +29,8 @@
           <tr>
             <td valign="top">
               {ADMIN_MENU}
+              {ADMIN_BLOCK}
               {GALLERY}
-              {CREDITS}
               <div style="text-align:center;">
               <div>
                           {LANGUAGE_SELECT_FLAGS}<br />
@@ -43,6 +43,6 @@
       </td>
     </tr>
   </table>
-  {CUSTOM_FOOTER}{VANITY}
+  {CUSTOM_FOOTER}{VANITY}{CREDITS}
 </body>
 </html>
