--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -74,7 +74,7 @@
   <div style="padding: 5px 20px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td valign="top">{ADMIN_MENU} {GALLERY} {CREDITS}</td>
+        <td valign="top">{ADMIN_MENU} {ADMIN_BLOCK} {GALLERY} </td>
       </tr>
 
       <tr>
@@ -88,6 +88,6 @@
         </td>
       </tr>
     </table>
-  </div>{CUSTOM_FOOTER} {VANITY}
+  </div>{CUSTOM_FOOTER} {VANITY} {CREDITS}
 </body>
 </html>
