--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -47,8 +47,8 @@
 
 <div id="GALLERY">
       {ADMIN_MENU}
+      {ADMIN_BLOCK}
       {GALLERY}
-      {CREDITS}
 </div>
 <div id="SELECT_FLAGS">
  {LANGUAGE_SELECT_FLAGS}
@@ -59,6 +59,6 @@
   <div id="VANITY">
   {VANITY}
   </div>
-
+{CREDITS}
 </body>
 </html>
