--- a/devel/themes/project_vii/template.html
+++ b/devel/themes/project_vii/template.html
@@ -32,8 +32,8 @@
 
 <div id="GALLERY">
   {ADMIN_MENU}
+  {ADMIN_BLOCK}
   {GALLERY}
-  {CREDITS}
 </div>
 
 <div id="SELECT_LISTS">
@@ -52,6 +52,6 @@
 <div id="VANITY">
   {VANITY}
 </div>
-
+{CREDITS}
 </body>
 </html>
