--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -121,8 +121,8 @@
             </td>
             <td width="100%" style="background-image:url(themes/rainy_day/images/template_r6_c3.gif);padding-left: 10px; padding-right: 10px;">
               {ADMIN_MENU}
+              {ADMIN_BLOCK}
               {GALLERY}
-              {CREDITS}
             </td>
             <td style="background-image:url(themes/rainy_day/images/template_r6_c9.gif)">
               <img src="themes/rainy_day/images/template_r6_c9.gif" width="42" height="328" border="0" alt="" />
@@ -163,6 +163,6 @@
 
   {CUSTOM_FOOTER}
   {VANITY}
-
+  {CREDITS}
 </body>
 </html>
