--- a/devel/themes/sample/template.html
+++ b/devel/themes/sample/template.html
@@ -41,17 +41,17 @@
           </tr>
         </table>
         {ADMIN_MENU}
+        {ADMIN_BLOCK}
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
             <td align="left" valign="top">
               {GALLERY}
-              {CREDITS}
             </td>
           </tr>
         </table>
       </td>
     </tr>
   </table>
-  {CUSTOM_FOOTER}{VANITY}
+  {CUSTOM_FOOTER}{VANITY}{CREDITS}
 </body>
 </html>
