Added message block for advanced administration purposes (work in progress). Changed name from "admin_block" to "message_block".
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3467 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -37,7 +37,7 @@
       <td id="m23"  style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
         <br />
         {ADMIN_MENU}
-        {ADMIN_BLOCK}
+        {MESSAGE_BLOCK}
       </td>
     </tr>
     <tr>
