--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -121,7 +121,7 @@
             </td>
             <td width="100%" style="background-image:url(themes/rainy_day/images/template_r6_c3.gif);padding-left: 10px; padding-right: 10px;">
               {ADMIN_MENU}
-              {ADMIN_BLOCK}
+              {MESSAGE_BLOCK}
               {GALLERY}
             </td>
             <td style="background-image:url(themes/rainy_day/images/template_r6_c9.gif)">
