--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -29,7 +29,7 @@
           <tr>
             <td valign="top">
               {ADMIN_MENU}
-              {ADMIN_BLOCK}
+              {MESSAGE_BLOCK}
               {GALLERY}
               <div style="text-align:center;">
               <div>
