--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -47,7 +47,7 @@
 
 <div id="GALLERY">
       {ADMIN_MENU}
-      {ADMIN_BLOCK}
+      {MESSAGE_BLOCK}
       {GALLERY}
 </div>
 <div id="SELECT_FLAGS">
