--- a/devel/themes/sample/template.html
+++ b/devel/themes/sample/template.html
@@ -41,7 +41,7 @@
           </tr>
         </table>
         {ADMIN_MENU}
-        {ADMIN_BLOCK}
+        {MESSAGE_BLOCK}
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
             <td align="left" valign="top">
