Added social bookmarks icons
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3989 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/template.html
+++ b/cpg1.5.x/themes/classic/template.html
@@ -42,6 +42,7 @@
         <td align="center" valign="top">
           {THEME_SELECT_LIST}
           {LANGUAGE_SELECT_LIST}
+          {SOCIAL_BOOKMARKS}
         </td>
       </tr>
     </table>
