--- a/cpg1.5.x/themes/eyeball/template.html
+++ b/cpg1.5.x/themes/eyeball/template.html
@@ -89,6 +89,7 @@
           <div style="text-align:center;">
             <div>
               {THEME_SELECT_LIST}&nbsp; {LANGUAGE_SELECT_LIST}<br />
+              {SOCIAL_BOOKMARKS}<br />
               {LANGUAGE_SELECT_FLAGS}
             </div>
           </div>
