--- a/cpg1.5.x/themes/fruity/template.html
+++ b/cpg1.5.x/themes/fruity/template.html
@@ -116,6 +116,7 @@
   </table>
   <br />
   <div align="center">{LANGUAGE_SELECT_FLAGS}</div>
+  <div align="center">{SOCIAL_BOOKMARKS}</div>
   {CUSTOM_FOOTER}
   {VANITY}
   {CREDITS}
