--- a/cpg1.5.x/themes/igames/template.html
+++ b/cpg1.5.x/themes/igames/template.html
@@ -58,7 +58,8 @@
       {GALLERY}
 </div>
 <div id="SELECT_FLAGS">
- {LANGUAGE_SELECT_FLAGS}
+ {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
+ {SOCIAL_BOOKMARKS}
  </div>
  <div id="CUSTOM_FOOTER">
   {CUSTOM_FOOTER}
