--- a/cpg1.5.x/themes/mac_ox_x/template.html
+++ b/cpg1.5.x/themes/mac_ox_x/template.html
@@ -54,7 +54,8 @@
 
 
 <div id="SELECT_FLAGS">
-  {LANGUAGE_SELECT_FLAGS}
+  {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
+  {SOCIAL_BOOKMARKS}
 </div>
 
 <div id="CUSTOM_FOOTER">
