--- a/cpg1.5.x/themes/project_vii/template.html
+++ b/cpg1.5.x/themes/project_vii/template.html
@@ -49,7 +49,8 @@
 </div>
 
 <div id="SELECT_FLAGS">
-  {LANGUAGE_SELECT_FLAGS}
+  {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
+  {SOCIAL_BOOKMARKS}
 </div>
 
 <div id="CUSTOM_FOOTER">
