--- a/cpg1.5.x/themes/water_drop/template.html
+++ b/cpg1.5.x/themes/water_drop/template.html
@@ -39,11 +39,11 @@
               {MESSAGE_BLOCK}
               {GALLERY}
               <div style="text-align:center;">
-              <div>
-                          {LANGUAGE_SELECT_FLAGS}<br />
-                          {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
-                          </div>
-                          </div>
+                <div>
+                  {LANGUAGE_SELECT_FLAGS}<br />
+                  {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{SOCIAL_BOOKMARKS}
+                </div>
+              </div>
             </td>
           </tr>
         </table>
