--- a/cpg1.5.x/themes/hardwired/template.html
+++ b/cpg1.5.x/themes/hardwired/template.html
@@ -49,7 +49,7 @@
 </table>
 <br />
 <div align="center"> {LANGUAGE_SELECT_FLAGS} <br />
-  <br />
+  {SOCIAL_BOOKMARKS}<br />
 </div>
 {CUSTOM_FOOTER}
 {VANITY}
