--- a/cpg1.5.x/themes/rainy_day/template.html
+++ b/cpg1.5.x/themes/rainy_day/template.html
@@ -167,6 +167,9 @@
   <div align="center">
     {LANGUAGE_SELECT_FLAGS}
   </div>
+  <div align="center">
+    {SOCIAL_BOOKMARKS}
+  </div>
 
   {CUSTOM_FOOTER}
   {VANITY}
