--- a/cpg1.5.x/themes/sample/template.html
+++ b/cpg1.5.x/themes/sample/template.html
@@ -42,6 +42,7 @@
         <td align="center" valign="top">
           {THEME_SELECT_LIST}
           {LANGUAGE_SELECT_LIST}
+          {SOCIAL_BOOKMARKS}
         </td>
       </tr>
     </table>
