Modified social bookmarks icons
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3992 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/fruity/template.html
+++ b/cpg1.5.x/themes/fruity/template.html
@@ -68,6 +68,8 @@
           <tr>
             <td style="background-color:#6BBE10" align="center" valign="top">
               {SYS_MENU}<br />{SUB_MENU}
+              <br />
+              {SOCIAL_BOOKMARKS}
             </td>
           </tr>
         </table>
@@ -116,7 +118,6 @@
   </table>
   <br />
   <div align="center">{LANGUAGE_SELECT_FLAGS}</div>
-  <div align="center">{SOCIAL_BOOKMARKS}</div>
   {CUSTOM_FOOTER}
   {VANITY}
   {CREDITS}
