--- a/cpg1.5.x/themes/eyeball/template.html
+++ b/cpg1.5.x/themes/eyeball/template.html
@@ -81,7 +81,12 @@
   <div style="padding: 5px 20px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td valign="top">{ADMIN_MENU} {MESSAGE_BLOCK} {GALLERY} </td>
+        <td valign="top">
+          {SOCIAL_BOOKMARKS}
+          {ADMIN_MENU}
+          {MESSAGE_BLOCK}
+          {GALLERY}
+        </td>
       </tr>
 
       <tr>
@@ -89,7 +94,6 @@
           <div style="text-align:center;">
             <div>
               {THEME_SELECT_LIST}&nbsp; {LANGUAGE_SELECT_LIST}<br />
-              {SOCIAL_BOOKMARKS}<br />
               {LANGUAGE_SELECT_FLAGS}
             </div>
           </div>
