Added favicon tag to all themes that come with coppermine
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4357 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/fruity/template.html
+++ b/cpg1.5.x/themes/fruity/template.html
@@ -6,6 +6,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/fruity/style.css" type="text/css" />
+<link rel="shortcut icon" href="favicon.ico" />
 {JAVASCRIPT}
 <!--
   SVN version info:
