--- a/cpg1.5.x/themes/hardwired/template.html
+++ b/cpg1.5.x/themes/hardwired/template.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <title>{TITLE}</title>
 <link rel="stylesheet" type="text/css" href="themes/hardwired/style.css" />
+<link rel="shortcut icon" href="favicon.ico" />
 {META}
 {JAVASCRIPT}
 <!--
