--- a/cpg1.5.x/themes/igames/template.html
+++ b/cpg1.5.x/themes/igames/template.html
@@ -7,6 +7,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/igames/style.css" type="text/css" />
+<link rel="shortcut icon" href="favicon.ico" />
 {JAVASCRIPT}
 <!--
   SVN version info:
