- Continued work on index.php and related script to use db class - Almost finished with index.php - Updated the code to match latest cpg15x branch
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4367 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgdbal/themes/eyeball/template.html
+++ b/cpgdbal/themes/eyeball/template.html
@@ -6,13 +6,14 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="themes/eyeball/style.css" type="text/css" />
+<link rel="shortcut icon" href="favicon.ico" />
 {JAVASCRIPT}
 <!--
   SVN version info:
   Coppermine version: 1.5.0
-  $Revision: 4151 $
+  $Revision: 4357 $
   $LastChangedBy: gaugau $
-  $Date: 2007-12-18 13:03:51 +0530 (Tue, 18 Dec 2007) $
+  $Date: 2008-03-25 12:02:31 +0530 (Tue, 25 Mar 2008) $
 -->
 </head>
 <body>
