Removed vanity option from config as per poll id 54323 - users who want to show the vanity block just need to add the {VANITY} token to their custom theme
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4954 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/eyeball/template.html
+++ b/cpg1.5.x/themes/eyeball/template.html
@@ -100,6 +100,6 @@
         </td>
       </tr>
     </table>
-  </div>{CUSTOM_FOOTER} {VANITY} {CREDITS}
+  </div>{CUSTOM_FOOTER} {CREDITS}
 </body>
 </html>
