Turned social bookmark script into jquery bookmark plugin
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4993 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/hardwired/template.html
+++ b/cpg1.5.x/themes/hardwired/template.html
@@ -36,7 +36,7 @@
     <td class="gallery"><div align="right" class="topmenu"> {SYS_MENU} </div>
       <br />
       <div align="left" class="topmenu">{SUB_MENU}</div> <br />
-      <div align="center"> {THEME_SELECT_LIST} {LANGUAGE_SELECT_LIST} </div>
+      <div align="center" class="hardwired_selector_wrapper"> {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{SOCIAL_BOOKMARKS}</div>
       <br />
       {ADMIN_MENU} {MESSAGE_BLOCK} {GALLERY}</td>
     <td width="19" class="middle-right">&nbsp;</td>
@@ -48,9 +48,7 @@
   </tr>
 </table>
 <br />
-<div align="center"> {LANGUAGE_SELECT_FLAGS} <br />
-  {SOCIAL_BOOKMARKS}<br />
-</div>
+<div align="center"> {LANGUAGE_SELECT_FLAGS}</div>
 {CUSTOM_FOOTER}
 {CREDITS}
 </body>
