--- a/cpg1.5.x/themes/mac_ox_x/template.html
+++ b/cpg1.5.x/themes/mac_ox_x/template.html
@@ -49,12 +49,13 @@
 <div id="SELECT_LISTS">
   {THEME_SELECT_LIST}
   {LANGUAGE_SELECT_LIST}
+  {SOCIAL_BOOKMARKS}
+  <span class="clear_float_left"></span>
 </div>
 
 
 <div id="SELECT_FLAGS">
-  {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
-  {SOCIAL_BOOKMARKS}
+  {LANGUAGE_SELECT_FLAGS}
 </div>
 
 <div id="CUSTOM_FOOTER">
