--- a/cpg1.5.x/themes/rainy_day/template.html
+++ b/cpg1.5.x/themes/rainy_day/template.html
@@ -51,7 +51,7 @@
                     <h1>&nbsp;{GAL_NAME}</h1>
                   </td>
                   <td align="left">
-                    {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
+                    {THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{SOCIAL_BOOKMARKS}
                   </td>
                 </tr>
               </table>
@@ -167,10 +167,7 @@
   <div align="center">
     {LANGUAGE_SELECT_FLAGS}
   </div>
-  <div align="center">
-    {SOCIAL_BOOKMARKS}
-  </div>
-
+  
   {CUSTOM_FOOTER}
   {CREDITS}
 </body>
