--- a/cpg1.5.x/themes/eyeball/template.html
+++ b/cpg1.5.x/themes/eyeball/template.html
@@ -24,7 +24,6 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
             <td width="49%" style="background-image:url(themes/eyeball/images/top_background_r1_c1.gif);"></td>
-
             <td width="2%">
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
@@ -61,7 +60,7 @@
               </table>
             </td>
 
-            <td width="49%" style="background-image:url(themes/eyeball/images/top_background_r1_c7.gif);"></td>
+            <td width="49%" style="background-image:url(themes/eyeball/images/top_background_r1_c7.gif);">{SOCIAL_BOOKMARKS}</td>
           </tr>
         </table>
       </td>
@@ -82,7 +81,6 @@
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
         <td valign="top">
-          {SOCIAL_BOOKMARKS}
           {ADMIN_MENU}
           {MESSAGE_BLOCK}
           {GALLERY}
