--- a/cpg1.5.x/themes/igames/template.html
+++ b/cpg1.5.x/themes/igames/template.html
@@ -58,9 +58,8 @@
       {GALLERY}
 </div>
 <div id="SELECT_FLAGS">
- {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
- {SOCIAL_BOOKMARKS}
- </div>
+ {LANGUAGE_SELECT_FLAGS}{SOCIAL_BOOKMARKS}
+</div>
  <div id="CUSTOM_FOOTER">
   {CUSTOM_FOOTER}
   </div>
