--- a/cpg1.5.x/themes/project_vii/template.html
+++ b/cpg1.5.x/themes/project_vii/template.html
@@ -39,6 +39,8 @@
 
 <div id="GALLERY">
   {ADMIN_MENU}
+  {SOCIAL_BOOKMARKS}
+  <span class="clear_float_left"></span><br />
   {MESSAGE_BLOCK}
   {GALLERY}
 </div>
@@ -50,7 +52,6 @@
 
 <div id="SELECT_FLAGS">
   {LANGUAGE_SELECT_FLAGS}&nbsp;&nbsp;&nbsp;&nbsp;
-  {SOCIAL_BOOKMARKS}
 </div>
 
 <div id="CUSTOM_FOOTER">
